# semverq

./: .env  .gitignore  Cargo.toml  Makefile  compose.yml  readme.md  semverq.md
.github/workflows/: check.yml  deploy.yml  package.yml
context/: Dockerfile  package.sh
debian/: changelog  control  copyright  rules  semverq.manpages
src/: error.rs  main.rs
