[package]
name = "semverq"
description = "a cli tool for accessing semver structure"
version = "0.1.0"
authors = ["eldesh <nephits@gmail.com>"]
edition = "2021"
readme = "readme.md"
license = "MIT"

[dependencies]
semver = "1.0.0"
thiserror = "1"
regex = "1"
clap = "3.1"
anyhow = "1.0"
serde_json = "1.0.81"
