[package]
name = "semverq"
description = "a cli tool for accessing semver structure"
version = "0.1.0"
authors = ["eldesh <nephits@gmail.com>"]
edition = "2018"
license = "MIT"
documentation = "https://docs.rs/semverq"
repository = "https://github.com/eldesh/semverq"
readme = "readme.md"

[dependencies]
semver = "1.0.0"
thiserror = "1"
regex = "1"
clap = "3.1"
anyhow = "1.0"
serde_json = "1.0.81"
